fix logo size on firefox (#81)

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -58,8 +58,13 @@ want the standard DUB fill color for big areas)
     padding: 0;
 }
 
-.md-header__button.md-logo :is(img, svg),
-.md-header__button.md-logo :-webkit-any(img,svg) {
+.md-header__button.md-logo :is(img, svg) {
+    height: 40px;
+    width: initial;
+}
+
+/* if this is in the same block as above (comma separated), this won't work in firefox for some reason, so we just duplicate the block */
+.md-header__button.md-logo :-webkit-any(img, svg) {
     height: 40px;
     width: initial;
 }
